java quantRoad -- python复刻