@@ -1,18 +1,21 @@
 package com.scareers.formals.kline.basemorphology.usesingleklinebasepercent;
+/**
+ * -Xmx512g -XX:+PrintGC -XX:MaxTenuringThreshold=3
+ */
 
 import cn.hutool.core.lang.Console;
-import cn.hutool.core.math.MathUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.extra.mail.MailUtil;
 import cn.hutool.json.JSONUtil;
 import com.scareers.datasource.selfdb.ConnectionFactory;
 import com.scareers.pandasdummy.DataFrameSelf;
 import com.scareers.sqlapi.TushareApi;
 import com.scareers.utils.CommonUtils;
+import com.scareers.utils.SettingsCommon;
 import com.scareers.utils.SqlUtil;
 import com.scareers.utils.Tqdm;
 import com.scareers.utils.combinpermu.Generator;
 import joinery.DataFrame;
-import org.apache.commons.math3.util.MathUtils;
 
 import java.math.BigDecimal;
 import java.sql.Connection;
@@ -46,19 +49,20 @@ public class SingleKlineFormsBase {
             // 不能关闭连接, 否则为 null, 引发空指针异常
             SqlUtil.execSql(
                     StrUtil.format(SettingsOfSingleKlineBasePercent.sqlDeleteExistDateRange,
-                            StrUtil.format("('{}','{}')", statDateRange.get(0), statDateRange.get(1))),
+                            StrUtil.format("[\"{}\",\"{}\"]", statDateRange.get(0), statDateRange.get(1))),
                     SettingsOfSingleKlineBasePercent.ConnOfSaveTable, false);
 
             statsConclusionOfBatchFormsCommons(stocks, stockWithStDateRanges, stockWithBoard, statDateRange,
                     Arrays.asList(-0.05, 0.05), 82, Arrays.<Double>asList(-0.205, 0.205),
                     SettingsOfSingleKlineBasePercent.saveTablename);
 
-//            MailUtil.send(SettingsCommon.receivers, StrUtil.format("部分解析完成: {}", statDateRange), "部分解析完成", false,
-//                    null);
-            break;
+            MailUtil.send(SettingsCommon.receivers, StrUtil.format("部分解析完成: {}", statDateRange), "部分解析完成", false,
+                    null);
+//            break;
         }
-//        MailUtil.send(SettingsCommon.receivers, "全部解析完成", "全部解析完成", false, null);
+        MailUtil.send(SettingsCommon.receivers, "全部解析完成", "全部解析完成", false, null);
         Console.log("email success");
+        System.exit(1);
     }
 
     /**
@@ -98,21 +102,22 @@ public class SingleKlineFormsBase {
                 results.putIfAbsent(key, new ArrayList<>());
                 results.get(key).addAll(resultTemp.get(key));
             }
+            resultTemp.clear();
             resultTemp = null;
-            int value = parseProcess.incrementAndGet();
-            if (value % 10 == SettingsOfSingleKlineBasePercent.gcControlEpoch) {
+            if (parseProcess.incrementAndGet() % SettingsOfSingleKlineBasePercent.gcControlEpoch == 0) {
                 System.gc();
+                Console.log("{} - {} == {}", Runtime.getRuntime().totalMemory(),
+                        Runtime.getRuntime().freeMemory(),
+                        Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory());
             }
         }
         latchOfParse.await();
         poolOfParse.shutdown(); // 关闭线程池
-        poolOfParse = null;
         connOfParse.close(); // 关闭唯一连接
-        connOfParse = null;
+        connOfParse = null; // 关闭唯一连接
         System.out.println();
-        Console.log(results.size());
-        Console.log(results.getClass().getName());
-//        Console.log(results);
+        Console.log("results size: {}", results.size());
+
 
         Console.log("构建结果字典完成");
         Console.log("开始计算并保存");
@@ -127,71 +132,69 @@ public class SingleKlineFormsBase {
         // 仅用于显示进度
         int totalEpochAmounts = (int) Math
                 .ceil((double) results.size() / SettingsOfSingleKlineBasePercent.perEpochTaskAmounts);
-        int process = 1;
+        ArrayList<Integer> epochs = new ArrayList<>();
+        for (int i = 0; i < totalEpochAmounts; i++) {
+            epochs.add(i);
+        }
+        AtomicInteger process = new AtomicInteger(0);
         Connection connOfSave = SettingsOfSingleKlineBasePercent.ConnOfSaveTable;
         CountDownLatch latchOfCalcForEpoch = new CountDownLatch(totalEpochAmounts);
-        for (int currentEpoch = 0; currentEpoch < Integer.MAX_VALUE; currentEpoch++) {
+        // 批量插入不伤ssd. 单条插入很伤ssd
+        for (Integer currentEpoch : Tqdm
+                .tqdm(epochs, "process: ")) {
             int startIndex = currentEpoch * SettingsOfSingleKlineBasePercent.perEpochTaskAmounts;
             int endIndex = (currentEpoch + 1) * SettingsOfSingleKlineBasePercent.perEpochTaskAmounts;
-            if (startIndex >= results.size()) {
-                Console.log("计算并保存完成!");
-                break;
-            }
-
             List<String> formNamesCurrentEpoch = forNameRaws
                     .subList(startIndex, Math.min(endIndex, forNameRaws.size()));
-
-
-            AtomicInteger processAnalyze = new AtomicInteger(0);//
-            for (String formName : Tqdm.tqdm(formNamesCurrentEpoch,
-                    StrUtil.format("process: {}/{}/{}", process, totalEpochAmounts, results.size()))) {
-                try {
-                    List<Double> resultSingle = results.get(formName);
-
-                    Future<String> f = poolOfCalc.submit(new CalcStatResultAndSaveTask(latchOfCalcForEpoch,
-                            connOfSave, formName,
-                            stocks.size(), statDateRange, resultSingle, bigChangeThreshold, bins, effectiveValueRange,
-                            saveTablename));
-                    String finishedFormName = f.get();
-                    results.remove(finishedFormName); // 删除key, 节省空间
-                } catch (Exception e) {
-                    e.printStackTrace();
+            try {
+                Future<List<String>> f = poolOfCalc.submit(new CalcStatResultAndSaveTask(latchOfCalcForEpoch,
+                        connOfSave, formNamesCurrentEpoch,
+                        stocks.size(), statDateRange, results, bigChangeThreshold, bins, effectiveValueRange,
+                        saveTablename));
+                List<String> finishedFormNames = f.get();
+                for (String formName0 : finishedFormNames) {
+                    results.remove(formName0); // 删除key, 节省空间
                 }
-
+                if (parseProcess.incrementAndGet() % SettingsOfSingleKlineBasePercent.gcControlEpoch == 0) {
+                    System.gc();
+                    Console.log("{} - {} == {}", Runtime.getRuntime().totalMemory(),
+                            Runtime.getRuntime().freeMemory(),
+                            Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory());
+                }
+            } catch (Exception e) {
+                e.printStackTrace();
             }
-            latchOfCalcForEpoch.await(); // 本轮执行完毕
-            process++;
-            formNamesCurrentEpoch = null;
-            //System.gc();
         }
+        Console.log("计算并保存完成!");
+        latchOfCalcForEpoch.await(); // 本轮执行完毕
         connOfSave.close();
         connOfSave = null;
     }
 }
 
-class CalcStatResultAndSaveTask implements Callable<String> {
+class CalcStatResultAndSaveTask implements Callable<List<String>> {
     CountDownLatch latchOfCalcForEpoch;
     // 每轮计数, 多出来.  而少了图片显示参数
     Connection connOfSingleThread;
 
-    String formName;
+    List<String> formNameRaws; // 注意是单个批量的forms(单个线程执行一个批量)
     int statStockCounts;
     List<String> statDateRange;
-    List<Double> results; // 单形态的统计列表
+    ConcurrentHashMap<String, List<Double>> results; // 单形态的统计列表
     List<Double> bigChangeThreshold;
     int bins;
     List<Double> effectiveValueRange;
     String saveTablename;
 
     public CalcStatResultAndSaveTask(CountDownLatch latchOfCalcForEpoch, Connection connOfSingleThread,
-                                     String formName, int statStockCounts,
-                                     List<String> statDateRange, List<Double> singleResult,
+                                     List<String> formNameRaws, int statStockCounts,
+                                     List<String> statDateRange, ConcurrentHashMap<String, List<Double>> singleResult,
                                      List<Double> bigChangeThreshold, int bins,
                                      List<Double> effectiveValueRange, String saveTablename) {
         this.latchOfCalcForEpoch = latchOfCalcForEpoch;
         this.connOfSingleThread = connOfSingleThread;
 
-        this.formName = formName;
+        this.formNameRaws = formNameRaws;
         this.statStockCounts = statStockCounts;
         this.statDateRange = statDateRange;
         this.results = singleResult;
@@ -202,77 +205,97 @@ class CalcStatResultAndSaveTask implements Callable<String> {
     }
 
     @Override
-    public String call() throws Exception {
+    public List<String> call() throws Exception {
         try {
-            HashMap<String, Object> analyzeResultMap =
+            DataFrame<Object> dfTotalSave = null;
+            HashMap<String, HashMap<String, Object>> analyzeResultMapTotal =
                     analyzeStatsResults(SettingsOfSingleKlineBasePercent.calcCdfAndFrequencyWithTick);
-            // 精细分析也不需要保存 cdfwithtick. 过于冗余
+            for (String formName : formNameRaws) {
+                HashMap<String, Object> analyzeResultMap = analyzeResultMapTotal.get(formName);
+                if (analyzeResultMap == null) { // 单条分析是可能为null的
+                    continue;
+                }
+                // 精细分析也不需要保存 cdfwithtick. 过于冗余
+                // 已经得到 分析结果, 需要注意 Map的Value 实际类别各不相同. 保存时需要一一对应
+                int splitIndex = formName.lastIndexOf("__");
+                String formNamePure = formName.substring(0, splitIndex);
+                String statResultAlgorithm = formName.substring(splitIndex + 2);
+                List<String> conditions = StrUtil.split(formNamePure, "__");
+                String condition1 = null;
+                String condition2 = null;
+                String condition3 = null;
+                String condition4 = null;
+                String condition5 = null;
+                String condition6 = null;
+                String condition7 = null;
 
-            // 已经得到 分析结果, 需要注意 Map的Value 实际类别各不相同. 保存时需要一一对应
-            int splitIndex = formName.lastIndexOf("__");
-            String formNamePure = formName.substring(0, splitIndex);
-            String statResultAlgorithm = formName.substring(splitIndex + 2);
-            List<String> conditions = StrUtil.split(formNamePure, "__");
-            String condition1 = null;
-            String condition2 = null;
-            String condition3 = null;
-            String condition4 = null;
-            String condition5 = null;
-            String condition6 = null;
-            String condition7 = null;
+                for (String condition : conditions) {
+                    if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(0))) {
+                        condition1 = condition;
+                    }
+                    if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(1))) {
+                        condition2 = condition;
+                    }
+                    if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(2))) {
+                        condition3 = condition;
+                    }
+                    if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(3))) {
+                        condition4 = condition;
+                    }
+                    if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(4))) {
+                        condition5 = condition;
+                    }
+                    if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(5))) {
+                        condition6 = condition;
+                    }
+                    if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(6))) {
+                        condition7 = condition;
+                    }
+                }
 
-            for (String condition : conditions) {
-                if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(0))) {
-                    condition1 = condition;
+                DataFrameSelf<Object> dfSingleSaved = saveAnalyzeResult(analyzeResultMap, formNamePure, statDateRange,
+                        statResultAlgorithm, "",
+                        connOfSingleThread,
+                        saveTablename,
+                        condition1, condition2,
+                        condition3, condition4, condition5, condition6, condition7);
+
+                synchronized (this) {
+                    if (dfTotalSave == null) {
+                        dfTotalSave = dfSingleSaved;
+                    } else {
+                        dfTotalSave = dfTotalSave.concat(dfSingleSaved);
+                    }
                 }
-                if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(1))) {
-                    condition2 = condition;
-                }
-                if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(2))) {
-                    condition3 = condition;
-                }
-                if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(3))) {
-                    condition4 = condition;
-                }
-                if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(4))) {
-                    condition5 = condition;
-                }
-                if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(5))) {
-                    condition6 = condition;
-                }
-                if (condition.startsWith(SettingsOfSingleKlineBasePercent.conditionNames.get(6))) {
-                    condition7 = condition;
-                }
+                results.remove(formName);
             }
+            // dfTotalSave 应当转换为 self
+            DataFrameSelf.toSql(dfTotalSave, saveTablename, connOfSingleThread, "append", null);
 
-            saveAnalyzeResult(analyzeResultMap, formNamePure, statDateRange, statResultAlgorithm, "",
-                    connOfSingleThread,
-                    saveTablename,
-                    condition1, condition2,
-                    condition3, condition4, condition5, condition6, condition7);
-            return formName;
+            return formNameRaws;
         } catch (Exception e) {
             e.printStackTrace();
         } finally {
             latchOfCalcForEpoch.countDown();
-            return formName;
+            return formNameRaws;
         }
     }
 
 
-    public static void saveAnalyzeResult(HashMap<String, Object> analyzeResultMap, String formNamePure,
-                                         List<String> statDateRange, String statResultAlgorithm, String conditionsSet,
-                                         Connection saveDb,
-                                         String saveTablename,
-                                         String condition1,
-                                         String condition2,
-                                         String condition3,
-                                         String condition4,
-                                         String condition5,
-                                         String condition6,
-                                         String condition7) throws SQLException {
+    public static DataFrameSelf<Object> saveAnalyzeResult(HashMap<String, Object> analyzeResultMap, String formNamePure,
+                                                          List<String> statDateRange, String statResultAlgorithm,
+                                                          String conditionsSet,
+                                                          Connection saveDb,
+                                                          String saveTablename,
+                                                          String condition1,
+                                                          String condition2,
+                                                          String condition3,
+                                                          String condition4,
+                                                          String condition5,
+                                                          String condition6,
+                                                          String condition7) throws SQLException {
 
-        saveAnalyzeResult(analyzeResultMap, formNamePure, statDateRange, statResultAlgorithm, conditionsSet
+        return saveAnalyzeResult(analyzeResultMap, formNamePure, statDateRange, statResultAlgorithm, conditionsSet
                 , saveDb, saveTablename, condition1, condition2, condition3, condition4, condition5, condition6,
                 condition7,
                 null, null, null, null,
@@ -331,25 +354,26 @@ class CalcStatResultAndSaveTask implements Callable<String> {
      * @param selfNotes
      * @param formDescription
      */
-    public static void saveAnalyzeResult(HashMap<String, Object> analyzeResultMap, String formNamePure,
-                                         List<String> statDateRange, String statResultAlgorithm, String conditionsSet,
-                                         Connection saveDb,
-                                         String saveTablename,
-                                         String condition1,
-                                         String condition2,
-                                         String condition3,
-                                         String condition4,
-                                         String condition5,
-                                         String condition6,
-                                         String condition7,
-                                         String condition8,
-                                         String condition9,
-                                         String condition10,
-                                         String selfNotes,
-                                         String formDescription
+    public static DataFrameSelf<Object> saveAnalyzeResult(HashMap<String, Object> analyzeResultMap, String formNamePure,
+                                                          List<String> statDateRange, String statResultAlgorithm,
+                                                          String conditionsSet,
+                                                          Connection saveDb,
+                                                          String saveTablename,
+                                                          String condition1,
+                                                          String condition2,
+                                                          String condition3,
+                                                          String condition4,
+                                                          String condition5,
+                                                          String condition6,
+                                                          String condition7,
+                                                          String condition8,
+                                                          String condition9,
+                                                          String condition10,
+                                                          String selfNotes,
+                                                          String formDescription
     ) throws SQLException {
         if (analyzeResultMap == null) {
-            return;
+            return null;
         }
 
         DataFrameSelf<Object> dfSaved = new DataFrameSelf<>();
@@ -442,7 +466,9 @@ class CalcStatResultAndSaveTask implements Callable<String> {
         row.add(condition10);
 
         dfSaved.append(row); // 加入.
-        dfSaved.toSql(saveTablename, saveDb, "append", null);
+        //dfSaved.toSql(saveTablename, saveDb, "append", null);
+//        Console.log(0);
+        return dfSaved;
         // 连接未关闭
     }
 
@@ -485,135 +511,140 @@ class CalcStatResultAndSaveTask implements Callable<String> {
      * cdf_list List<Double>
      * cdf_with_tick    List<List<Double>>
      */
-    public HashMap<String, Object> analyzeStatsResults(boolean calcCdfOrFrequencyWithTick) {
-        List<Double> outliers = new ArrayList<>();
-        List<Double> effectiveResults = new ArrayList<>();
-        List<Integer> occurencesList = new ArrayList<>();
-        for (int i = 0; i < bins; i++) {
-            occurencesList.add(0); // 数量记录初始化
-        }
-        Double perRangeWidth = (effectiveValueRange.get(1) - effectiveValueRange.get(0)) / bins;
-        List<Double> tickList = new ArrayList<>();
-        for (int i = 0; i < bins + 1; i++) {// 初始化 tick列表.
-            tickList.add(effectiveValueRange.get(0) + i * perRangeWidth);
-        }
-        for (int i = 0; i < results.size(); i++) {
-            Double value = results.get(i);
-            if (value < effectiveValueRange.get(0) || value > effectiveValueRange.get(1)) {
-                outliers.add(value);
-                continue;
+    public HashMap<String, HashMap<String, Object>> analyzeStatsResults(boolean calcCdfOrFrequencyWithTick) {
+        HashMap<String, HashMap<String, Object>> res = new HashMap<>();
+        for (String formName : formNameRaws) {
+            List<Double> results0 = results.get(formName); // 单条结果
+
+            List<Double> outliers = new ArrayList<>();
+            List<Double> effectiveResults = new ArrayList<>();
+            List<Integer> occurencesList = new ArrayList<>();
+            for (int i = 0; i < bins; i++) {
+                occurencesList.add(0); // 数量记录初始化
             }
-            effectiveResults.add(value);
-            if (value.equals(effectiveValueRange.get(1))) { // 常规是前包后不包. 恰好等于最大限制的, 放在最后一个bin
-                Integer count = occurencesList.get(bins - 1);
-                occurencesList.set(bins - 1, count + 1);
-                continue;
+            Double perRangeWidth = (effectiveValueRange.get(1) - effectiveValueRange.get(0)) / bins;
+            List<Double> tickList = new ArrayList<>();
+            for (int i = 0; i < bins + 1; i++) {// 初始化 tick列表.
+                tickList.add(effectiveValueRange.get(0) + i * perRangeWidth);
             }
-            int index = (int) ((value - effectiveValueRange.get(0)) / perRangeWidth);
-            Integer count = occurencesList.get(index);
-            occurencesList.set(index, count + 1);
-        }
-
-        if (effectiveResults.size() <= 0) {
-            return null; // 没有有效统计数值, 返回null, 调用方注意判断
-        }
-
-        HashMap<String, Object> conclusion = new HashMap<>();
-        conclusion.put("stat_stock_counts", statStockCounts); // int
-        conclusion.put("total_counts", results.size()); // int
-        conclusion.put("outliers_counts", outliers.size()); // int
-        conclusion.put("outliers_count_percent",
-                (double) (int) conclusion.get("outliers_counts") / (int) conclusion.get(
-                        "total_counts")); // double
-        conclusion.put("effective_counts", occurencesList.stream().mapToInt(Integer::intValue).sum()); // int
-        conclusion.put("effective_count_percent",
-                (double) (int) conclusion.get("effective_counts") / (int) conclusion.get(
-                        "total_counts")); // double
-
-        ArrayList<Integer> zeroCompareCounts = new ArrayList<>();
-        int ltZero = 0, eqZero = 0, gtZero = 0;
-        for (Double i : effectiveResults) {
-            if (i < 0.0) {
-                ltZero++;
-            } else if (i == 0.0) {
-                eqZero++;
-            } else {
-                gtZero++;
+            for (int i = 0; i < results0.size(); i++) {
+                Double value = results0.get(i);
+                if (value < effectiveValueRange.get(0) || value > effectiveValueRange.get(1)) {
+                    outliers.add(value);
+                    continue;
+                }
+                effectiveResults.add(value);
+                if (value.equals(effectiveValueRange.get(1))) { // 常规是前包后不包. 恰好等于最大限制的, 放在最后一个bin
+                    Integer count = occurencesList.get(bins - 1);
+                    occurencesList.set(bins - 1, count + 1);
+                    continue;
+                }
+                int index = (int) ((value - effectiveValueRange.get(0)) / perRangeWidth);
+                Integer count = occurencesList.get(index);
+                occurencesList.set(index, count + 1);
             }
-        }
-        ArrayList<Double> zeroCompareCountsPercent = getDoubles(effectiveResults, conclusion, zeroCompareCounts, ltZero,
-                eqZero,
-                gtZero, "zero_compare_counts");
-        conclusion.put("zero_compare_counts_percent", zeroCompareCountsPercent); //AL
 
-        ArrayList<Integer> bigchangeCompareCounts = new ArrayList<>();
-        int ltBigchange = 0, betweenBigchange = 0, gtBigchange = 0;
-        for (Double i : effectiveResults) {
-            if (i <= bigChangeThreshold.get(0)) {
-                ltBigchange++;
-            } else if (i >= bigChangeThreshold.get(1)) {
-                gtBigchange++;
-            } else {
-                betweenBigchange++;
+            if (effectiveResults.size() <= 0) {
+                continue; // 没有有效统计数值, 则conclusion为null. 这里直接skip掉.  后面res.get(key) , 也要判定一下是否为null
             }
-        }
-        ArrayList<Double> bigchangeCompareCountsPercent = getDoubles(effectiveResults, conclusion,
-                bigchangeCompareCounts, ltBigchange, betweenBigchange, gtBigchange,
-                "bigchange_compare_counts");
-        // @noti: 这里故意拼写错误 percent成 percnet, 为了数据表字段将错就错
-        conclusion.put("bigchange_compare_counts_percnet", bigchangeCompareCountsPercent); //AL
 
-        DataFrame<Double> dfEffectiveResults = new DataFrame<>();
-        dfEffectiveResults.add("value", effectiveResults);
-        conclusion.put("mean", dfEffectiveResults.mean().get(0, 0));
+            HashMap<String, Object> conclusion = new HashMap<>();
+            conclusion.put("stat_stock_counts", statStockCounts); // int
+            conclusion.put("total_counts", results0.size()); // int
+            conclusion.put("outliers_counts", outliers.size()); // int
+            conclusion.put("outliers_count_percent",
+                    (double) (int) conclusion.get("outliers_counts") / (int) conclusion.get(
+                            "total_counts")); // double
+            conclusion.put("effective_counts", occurencesList.stream().mapToInt(Integer::intValue).sum()); // int
+            conclusion.put("effective_count_percent",
+                    (double) (int) conclusion.get("effective_counts") / (int) conclusion.get(
+                            "total_counts")); // double
+
+            ArrayList<Integer> zeroCompareCounts = new ArrayList<>();
+            int ltZero = 0, eqZero = 0, gtZero = 0;
+            for (Double i : effectiveResults) {
+                if (i < 0.0) {
+                    ltZero++;
+                } else if (i == 0.0) {
+                    eqZero++;
+                } else {
+                    gtZero++;
+                }
+            }
+            ArrayList<Double> zeroCompareCountsPercent = getDoubles(effectiveResults, conclusion, zeroCompareCounts,
+                    ltZero,
+                    eqZero,
+                    gtZero, "zero_compare_counts");
+            conclusion.put("zero_compare_counts_percent", zeroCompareCountsPercent); //AL
+
+            ArrayList<Integer> bigchangeCompareCounts = new ArrayList<>();
+            int ltBigchange = 0, betweenBigchange = 0, gtBigchange = 0;
+            for (Double i : effectiveResults) {
+                if (i <= bigChangeThreshold.get(0)) {
+                    ltBigchange++;
+                } else if (i >= bigChangeThreshold.get(1)) {
+                    gtBigchange++;
+                } else {
+                    betweenBigchange++;
+                }
+            }
+            ArrayList<Double> bigchangeCompareCountsPercent = getDoubles(effectiveResults, conclusion,
+                    bigchangeCompareCounts, ltBigchange, betweenBigchange, gtBigchange,
+                    "bigchange_compare_counts");
+            // @noti: 这里故意拼写错误 percent成 percnet, 为了数据表字段将错就错
+            conclusion.put("bigchange_compare_counts_percnet", bigchangeCompareCountsPercent); //AL
+
+            DataFrame<Double> dfEffectiveResults = new DataFrame<>();
+            dfEffectiveResults.add("value", effectiveResults);
+            conclusion.put("mean", dfEffectiveResults.mean().get(0, 0));
 //        conclusion.put("mean", 1);
-        conclusion.put("std", dfEffectiveResults.stddev().get(0, 0));
-        conclusion.put("min", dfEffectiveResults.min().get(0, 0));
-        conclusion.put("max", dfEffectiveResults.max().get(0, 0));
-        conclusion.put("skew", dfEffectiveResults.skew().get(0, 0));
+            conclusion.put("std", dfEffectiveResults.stddev().get(0, 0));
+            conclusion.put("min", dfEffectiveResults.min().get(0, 0));
+            conclusion.put("max", dfEffectiveResults.max().get(0, 0));
+            conclusion.put("skew", dfEffectiveResults.skew().get(0, 0));
 
-        conclusion.put("kurt", dfEffectiveResults.kurt().get(0, 0));
+            conclusion.put("kurt", dfEffectiveResults.kurt().get(0, 0));
 //        conclusion.put("kurt", 1);
 
-        // Double
-        conclusion.put("virtual_geometry_mean", calcVirtualGeometryMeanRecursion(effectiveResults, 100, 1000));
+            // Double
+            conclusion.put("virtual_geometry_mean", calcVirtualGeometryMeanRecursion(effectiveResults, 100, 1000));
 
 //        conclusion_base_stat['virtual_geometry_mean'] = calc_virtual_geometry_mean_recursion(effective_results,
 //                parts = 100,
 //                single_max_lenth = 1000)
 
-        conclusion.put("effective_value_range", effectiveValueRange);
-        conclusion.put("bins", bins);
-        conclusion.put("big_change_threshold", bigChangeThreshold);
+            conclusion.put("effective_value_range", effectiveValueRange);
+            conclusion.put("bins", bins);
+            conclusion.put("big_change_threshold", bigChangeThreshold);
 
-        conclusion.put("tick_list", tickList);
-        conclusion.put("occurrences_list", occurencesList);
-        ArrayList<Double> frequencyList = new ArrayList<>();
-        for (Integer i : occurencesList) {
-            frequencyList.add((double) i / effectiveResults.size());
+            conclusion.put("tick_list", tickList);
+            conclusion.put("occurrences_list", occurencesList);
+            ArrayList<Double> frequencyList = new ArrayList<>();
+            for (Integer i : occurencesList) {
+                frequencyList.add((double) i / effectiveResults.size());
+            }
+            conclusion.put("frequency_list", frequencyList);
+            // 不使用null, 因frequency_with_tick 将被转换为json字符串保存, 这里直接设定为 "",
+            // 如果使用null, 保存时会报错: No value specified for parameter 6
+            conclusion.put("frequency_with_tick", "");
+            if (calcCdfOrFrequencyWithTick) {
+                List<List<Double>> frequencyWithTick = getListWithTick(tickList, frequencyList);
+                conclusion.put("frequency_with_tick", frequencyWithTick);
+            }
+
+            DataFrame<Double> dfTemp = new DataFrame<>();
+            dfTemp.append(frequencyList);
+            dfTemp = dfTemp.cumsum();
+            List<Double> cdfList = dfTemp.col(0);
+            conclusion.put("cdf_list", cdfList);
+            conclusion.put("cdf_with_tick", "");
+            if (calcCdfOrFrequencyWithTick) {
+                List<List<Double>> cdfWithTick = getListWithTick(tickList, cdfList);
+                conclusion.put("cdf_with_tick", cdfWithTick);
+            }
+            res.put(formName, conclusion);
         }
-        conclusion.put("frequency_list", frequencyList);
-        // 不使用null, 因frequency_with_tick 将被转换为json字符串保存, 这里直接设定为 "",
-        // 如果使用null, 保存时会报错: No value specified for parameter 6
-        conclusion.put("frequency_with_tick", "");
-        if (calcCdfOrFrequencyWithTick) {
-            List<List<Double>> frequencyWithTick = getListWithTick(tickList, frequencyList);
-            conclusion.put("frequency_with_tick", frequencyWithTick);
-        }
-
-        DataFrame<Double> dfTemp = new DataFrame<>();
-        dfTemp.append(frequencyList);
-        dfTemp = dfTemp.cumsum();
-        List<Double> cdfList = dfTemp.col(0);
-        conclusion.put("cdf_list", cdfList);
-        conclusion.put("cdf_with_tick", "");
-        if (calcCdfOrFrequencyWithTick) {
-            List<List<Double>> cdfWithTick = getListWithTick(tickList, cdfList);
-            conclusion.put("cdf_with_tick", cdfWithTick);
-        }
-
-
-        return conclusion;
+        return res;
     }
 
     /**
